# fake-track

./: .env.example  .gitignore  README.md  fake-track.example.toml  map.osm  pyproject.toml
.github/workflows/: daily-run.yml
src/fake_track/: __init__.py  cli.py  client.py  config.py  geo.py  models.py  osm.py  track.py  track_generator.py  visualize.py  workflow.py
src/fake_track/cli/: __main__.py  cli.py
src/fake_track/core/: client.py  config.py  config_service.py  crypto.py  models.py  payloads.py  track_generator.py  utils.py  visualize.py  workflow.py
src/fake_track/web/: __init__.py  components.py  pages.py  utils.py
