[project]
name = "fake-track"
version = "0.2.0"
description = "华理校园跑调试工具"
readme = "README.md"
authors = [
    { name = "DOHEX", email = "dohex@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.6",
    "osmnx>=2.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=13.9.4",
    "requests>=2.32.3",
    "typer>=0.24.1",
    "matplotlib>=3.10.8",
]

[project.scripts]
fake-track = "fake_track.cli:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["I"]

[dependency-groups]
dev = [
    "prek>=0.3.8",
]
