[project]
name = "fake-track"
version = "1.2.0"
description = "校园跑接口调试工具"
readme = "README.md"
authors = [
    { name = "DOHEX", email = "dohex@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cryptography>=47.0.0",
    "osmnx>=2.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
    "requests>=2.33.1",
    "typer>=0.25.0",
    "matplotlib>=3.10.9",
]

[project.scripts]
fake-track = "fake_track.cli:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["I"]

[dependency-groups]
dev = [
    "prek>=0.3.11",
    "ruff>=0.15.12",
]
